--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,18 +13,19 @@
  
 <body>
 
-    <div class="jumbotron">
-        <h1 class="display-4">Find your match</h1>
-        <p class="lead">Take our quick survey to find your best friend!</p>
-        <hr class="my-4">
+    <div class="jumbotron ">
+
+        <h1 class="display-4 d-flex justify-content-center">Find your match</h1>
+        <p class="lead d-flex justify-content-center">Take our quick survey to find your best friend!</p>
+        <hr class="my-4 d-flex">
         
-        <a href="./survey.html"><button class="btn btn-lg btn-danger"> Survey</button></a>
+        <a href="./survey.html" class='d-flex justify-content-center'><button class="btn btn-lg btn-danger d-flex justify-content-center"> Survey</button></a>
         
     </div>
 
 
     <div>
-        <a href="/api/friends">API Friends List</a> 
+        <a href="/api/friends" class='d-flex justify-content-center'>API Friends List</a> 
     </div>
 </body>
 
